--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0000FF</color>
     <color name="FireBrick">#B22222</color>
+    <color name="BlanchedAlmond">#FFEBCD</color>
 </resources>
