--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -132,5 +132,5 @@
                 app:spanCount="7"
                 tools:listitem="@layout/item_day" />
         </LinearLayout>
-
     </FrameLayout>
+</layout>
