--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".fragment.MainFragment">
-    <data class="FragmentMainBinding">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.home.HomeFragment">
 
-    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -131,4 +131,4 @@
                 tools:listitem="@layout/item_day" />
         </LinearLayout>
     </FrameLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
