--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="20dp"
         android:orientation="horizontal">
         <ImageButton
+            android:id="@+id/grid_year_leftBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/design_default_color_background"
@@ -23,6 +24,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/month_grid_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2020년"
@@ -31,6 +33,7 @@
             android:gravity="center"
             android:layout_weight="8"/>
         <ImageButton
+            android:id="@+id/grid_year_rightBtn"
             android:src="@drawable/right_arrow"
             android:background="@color/design_default_color_background"
             android:layout_width="wrap_content"
