--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -18,7 +18,7 @@
         <ImageButton
             android:id="@+id/grid_year_leftBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/design_default_color_background"
             android:src="@drawable/left_arrow"
             android:layout_gravity="center"
@@ -31,13 +31,13 @@
             android:textSize="24dp"
             android:textColor="@color/black"
             android:gravity="center"
-            android:layout_weight="8"/>
+            android:layout_weight="4"/>
         <ImageButton
             android:id="@+id/grid_year_rightBtn"
             android:src="@drawable/right_arrow"
             android:background="@color/design_default_color_background"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"/>
 
