--- a/app/src/main/res/layout/activity_test2.xml
+++ b/app/src/main/res/layout/activity_test2.xml
@@ -48,7 +48,7 @@
                 android:textSize="20dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
-                android:text="2021.05.07금"/>
+                android:text="2021.05.12(수)"/>
             <TextView
                 android:id="@+id/start_time"
                 android:layout_width="wrap_content"
@@ -62,7 +62,7 @@
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:singleLine="true"
-                android:text="오전 7:00"/>
+                android:text="오전 00:00"/>
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
@@ -92,7 +92,7 @@
                 android:background="@drawable/textviewbtn_item"
                 android:textColor="@color/black"
                 android:singleLine="true"
-                android:text="2021.05.07금"/>
+                android:text="2021.05.12(수)"/>
             <TextView
                 android:id="@+id/end_time"
                 android:layout_width="wrap_content"
@@ -106,7 +106,7 @@
                 android:textColor="@color/black"
                 android:singleLine="true"
                 android:gravity="center"
-                android:text="오전 7:00"/>
+                android:text="오전 00:00"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
