--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,36 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data class="DayItemBinding">
-        <variable
-            name="calendarInfo"
-            type="com.jeongs.workplan.db.CalendarDAO" />
-    </data>
-
-
-    <LinearLayout
-        android:id="@+id/Calendar_Background"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <TextView
+        android:id="@+id/textView_DateNumber"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:textSize="20sp"
+        android:gravity="center_horizontal|top"
         android:background="@drawable/calendar_item"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView_DateNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_gravity="center"
-            android:textSize="14dp"
-            android:layout_marginTop="1dp"
-            app:setDate="@{calendarInfo}"
-            tools:text="일자출력"
-            android:textColor="@color/black">
-
-        </TextView>
-    </LinearLayout>
-
-</layout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
