--- a/app/src/main/res/layout/fragment_home_view.xml
+++ b/app/src/main/res/layout/fragment_home_view.xml
@@ -14,20 +14,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <!--헤더-->
+            <TextView
+                android:background="@drawable/textlines"
+                android:layout_height="2dp"
+                android:layout_width="match_parent"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:animateLayoutChanges="true"
                 android:gravity="left"
-                android:background="@color/purple_500"
+                android:background="@color/white"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/select_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:textFontWeight="900"
-                    android:text="2020년 7월"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:padding="5dp"
                     android:layout_gravity="center"
@@ -36,6 +39,10 @@
                     android:layout_margin="15dp" />
 
             </LinearLayout>
+            <TextView
+                android:background="@drawable/textlines"
+                android:layout_height="2dp"
+                android:layout_width="match_parent"/>
             <!--요일-->
             <LinearLayout
                 android:layout_width="match_parent"
