--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -7,12 +7,15 @@
     <TextView
         android:id="@+id/textView_DateNumber"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="1"
-        android:textSize="20sp"
-        android:gravity="center_horizontal|top"
+        android:textSize="15sp"
+        android:padding="10dp"
+        android:gravity="right|top"
         android:background="@drawable/calendar_item"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
