--- a/app/src/main/res/layout/activity_day_select.xml
+++ b/app/src/main/res/layout/activity_day_select.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TestActivity2">
+    tools:context=".DaySelectModal">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
@@ -193,6 +193,8 @@
             android:id="@+id/place_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:privateImeOptions="defaultInputmode=korea"
+            android:inputType="textWebEditText"
             android:layout_marginBottom="20dp"
             android:hint="장소를 입력하세요"/>
         <TextView
@@ -203,6 +205,8 @@
             android:id="@+id/memo_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:privateImeOptions="defaultInputmode=korea"
+            android:inputType="textWebEditText"
             android:layout_marginBottom="20dp"
             android:hint="메모를 입력하세요"/>
     </LinearLayout>
