--- a/app/src/main/res/layout/periodfilter_bottomsheet.xml
+++ b/app/src/main/res/layout/periodfilter_bottomsheet.xml
@@ -119,7 +119,7 @@
         android:id="@+id/calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
