--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -50,9 +50,8 @@
             android:text="\u003E"
             />
     </LinearLayout>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/nStmt_viewpager2"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/nStmt_recycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/guideline2"
