--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:padding="20dp"
     android:columnCount="1"
-    tools:context=".ui.home.MonthSelectDialog"
+    tools:context=".ui.calendar.MonthSelectDialog"
     >
     <LinearLayout
         android:layout_width="match_parent"
