--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -62,9 +62,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
+        android:padding="20dp"
         app:layout_constraintTop_toBottomOf="@+id/header_layout"
-        app:layout_constraintBottom_toTopOf="@id/guideline3"
-        >
+        app:layout_constraintBottom_toTopOf="@id/guideline3">
+
+        <TextView
+            android:id="@+id/value_count"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="2건"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
